Kalyteros tropos emfanisis tis eidisis

--- a/NewsFeedWebhose/views/templates/newsfeed.ejs
+++ b/NewsFeedWebhose/views/templates/newsfeed.ejs
@@ -1,6 +1,4 @@
 <% output['posts'].forEach(function(item) { %>
-<% console.log("TITLE FULL" + item.thread.title_full) %>
-<% console.log("TITLE" + item.thread.title) %>
 <div class="col-md-10 blogShort">
     <% if (item.thread.title_full) { %>
     <h1><%- item.thread.title_full %></h1>
@@ -8,12 +6,16 @@
     <h1><%- item.thread.title %></h1>
     <% } %>
 
+    <% if (item.thread.main_image) { %>
     <img src="<%- item.thread.main_image %>" alt="post img"
-         class="pull-left img-responsive thumb margin10 img-thumbnail">
+         class="pull-left img-responsive thumb my-img img-thumbnail">
+    <% } %>
 
-    <em>Original Source: <a href="<%- item.thread.site_full %>"
-                            target="_blank"><%- item.thread.site_full %></a></em>
+    <em><a href="http://<%- item.thread.site_full %>"
+           target="_blank"><%- item.thread.site_full %></a>
+        <%- new Date(Date.parse(item.thread.published)).toLocaleString() %></em>
     <article><p><%- item.text %></p></article>
-    <a class="btn btn-blog pull-right marginBottom10" href="<%- item.thread.url %>">Περισσότερα ...</a>
+    <a class="btn btn-blog pull-right marginBottom10" href="<%- item.thread.url %>"
+       target="_blank">Περισσότερα ...</a>
 </div>
 <% }); %>
