--- a/NewsFeedWebhose/public/stylesheets/style.css
+++ b/NewsFeedWebhose/public/stylesheets/style.css
@@ -1,5 +1,9 @@
 body {
     word-wrap: break-word;
+    margin: 0 auto;
+    padding-top: 5em;
+    text-align: justify;
+    /*width: 30em;*/
 }
 
 .blogShort {
@@ -66,7 +70,11 @@ h2 {
     color: #34ca78;
 }
 
-.margin10 {
+.my-img {
+    max-width: 100%;
+    max-height: 100%;
+    background-size: auto;
+    background-clip: border-box;
     margin-bottom: 10px;
     margin-right: 10px;
 }
