Kalyteros tropos emfanisis tis eidisis

--- a/NewsFeedWebhose/public/stylesheets/style.css
+++ b/NewsFeedWebhose/public/stylesheets/style.css
@@ -2,6 +2,7 @@ body {
     word-wrap: break-word;
     margin: 0 auto;
     padding-top: 5em;
+    padding-right: 50px;
     text-align: justify;
     /*width: 30em;*/
 }
@@ -71,10 +72,27 @@ h2 {
 }
 
 .my-img {
-    max-width: 100%;
-    max-height: 100%;
-    background-size: auto;
-    background-clip: border-box;
     margin-bottom: 10px;
     margin-right: 10px;
+}
+
+div.center-cropped {
+    float: left;
+    padding-right: 1em;
+    padding-bottom: 1em;
+    width: 420px;
+    height: 280px;
+    overflow: hidden;
+}
+
+div.center-cropped img {
+    width: 100%;
+    top: 50%;
+    position: relative;
+    transform: translateY(-50%);
+}
+
+.article-body p {
+    font-size: 20px;
+    line-height: 28px;
 }
