--- a/NewsFeedWebhose/public/stylesheets/style.css
+++ b/NewsFeedWebhose/public/stylesheets/style.css
@@ -7,6 +7,10 @@ body {
     /*width: 30em;*/
 }
 
+body a:hover {
+    text-decoration: none;
+}
+
 .blogShort {
     border-bottom: 1px solid #ddd;
 }
@@ -95,4 +99,22 @@ div.center-cropped img {
 .article-body p {
     font-size: 20px;
     line-height: 28px;
+}
+
+.hover_style {
+    color: black;
+    text-decoration: none;
+}
+
+.hover_style:hover {
+    color: black;
+    text-decoration: none;
+}
+
+article {
+    border-bottom: 1px solid black;
+}
+
+article p {
+    margin-bottom: .5em;
 }
