--- a/NewsFeedWebhose/views/index.ejs
+++ b/NewsFeedWebhose/views/index.ejs
@@ -4,6 +4,7 @@
 <div class="container">
     <div id="blog" class="row">
         <div class="col-sm-2 paddingTop20">
+            <!-- Temporary nav -->
             <nav class="nav-sidebar">
                 <ul class="nav">
                     <li class="active"><a href="javascript:"><span class="glyphicon glyphicon-star"></span> News</a>
