--- a/NewsFeedWebhose/views/templates/head.ejs
+++ b/NewsFeedWebhose/views/templates/head.ejs
@@ -12,5 +12,6 @@
     <script src="/javascripts/jquery-3.2.1.js" type="text/javascript"></script>
     <script src="/javascripts/jquery-3.2.1.min.js" type="text/javascript"></script>
     <script src="/javascripts/bootstrap.js" type="text/javascript"></script>
+    <script type="text/javascript" src="https://viralpatel.net/blogs/demo/jquery/jquery.shorten.1.0.js"></script>
 </head>
 <body>
