--- a/NewsFeedWebhose/views/templates/newsfeed.ejs
+++ b/NewsFeedWebhose/views/templates/newsfeed.ejs
@@ -1,37 +1,43 @@
 <% output['posts'].forEach(function(item) { %>
 <div class="col-md-10 blogShort">
-    <% if (item.thread.title_full) { %>
-    <h1><%= item.thread.title_full %></h1>
-    <% } else { %>
-    <h1><%= item.thread.title %></h1>
-    <% } %>
+    <!--article class="article-body"-->
+    <a class="hover_style" href="<%- item.thread.url %>" target="_blank">
+        <% if (item.thread.title_full) { %>
+        <h1><%= item.thread.title_full %></h1>
+        <% } else { %>
+        <h1><%= item.thread.title %></h1>
+        <% } %>
 
-    <% if (item.thread.main_image) { %>
-    <div class="center-cropped">
-        <img src="<%- item.thread.main_image %>" alt="post img"
-             class="pull-left img-responsive thumb my-img img-thumbnail">
-    </div>
-    <% } %>
-
+        <div class="center-cropped">
+            <img src="<%- item.thread.main_image %>" alt="post img"
+                 class="pull-left img-responsive thumb my-img img-thumbnail"
+                 onError="this.onerror=null;this.src='/images/photo-not-available.png';">
+        </div>
+    </a>
     <article class="article-body">
-        <p><%= item.text %></p>
+        <p class="read-more"><%= item.text %></p>
     </article>
-    <em>
-        <a href="http://<%= item.thread.site_full %>" target="_blank">
-            <%= item.thread.site_full %>
-        </a>
-    </em>
-    <em class="pull-right">
-        <%= moment(item.thread.published).format('LLLL') %>
-    </em>
-
-    <!--
-    <em><a href="http://<%#= item.thread.site_full %>"
-           target="_blank"><%#= item.thread.site_full %></a>
-        <%#= new Date(Date.parse(item.thread.published)).toLocaleString() %></em>
-    <article><p><%#= item.text %></p></article>
-    <a class="btn btn-blog pull-right marginBottom10" href="<%#= item.thread.url %>"
-       target="_blank">Περισσότερα ...</a>
-       -->
+    <div class="clearfix">
+        <em>
+            <a href="http://<%= item.thread.site_full %>" target="_blank">
+                <%= item.thread.site_full %>
+            </a>
+        </em>
+        <em class="pull-right">
+            <%= moment(item.thread.published).format('LLLL') %>
+            <!-- px Τρίτη, 17 Οκτωβρίου 2017 9:54 ΜΜ -->
+        </em>
+    </div>
 </div>
 <% }); %>
+<script type="text/javascript">
+    $(document).ready(function () {
+
+        $(".read-more").shorten({
+            "showChars": 500,
+            "moreText": "Περισσότερα",
+            "lessText": "Λιγότερα"
+        });
+
+    });
+</script>
