--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,13 @@
 <% include ./templates/head.ejs %>
 <% include ./templates/navbar.ejs %>
 <body>
-<div class="container">
+<div class="container-fluid">
+    <!-- Kalyteri emfanisi -->
     <div id="blog" class="row">
-        <div class="col-sm-2 paddingTop20">
+        <div class="col-sm-2 responsive">
             <!-- Temporary nav -->
-            <nav class="nav-sidebar">
-                <ul class="nav">
+            <nav class="nav-sidebar" data-spy="affix">
+                <ul class="nav nav-stacked">
                     <li class="active"><a href="javascript:"><span class="glyphicon glyphicon-star"></span> News</a>
                     </li>
                     <li><a href="javascript:">Latest news</a></li>
@@ -20,7 +21,6 @@
                     <li><a href="javascript:"><i class="glyphicon glyphicon-off"></i> Sign in</a></li>
                 </ul>
             </nav>
-            <div><h2 class="add">Place for your add!</h2></div>
         </div>
         <% include ./templates/newsfeed.ejs %>
         <div class="col-md-12 gap10"></div>
