--- a/views/templates/navbar.ejs
+++ b/views/templates/navbar.ejs
@@ -22,7 +22,7 @@
                 </ul>
             </li>
             <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Τύπος είδησεογραφικής ιστοσελίδας
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Τύπος ειδησεογραφικής ιστοσελίδας
                     <b class="caret"></b></a>
                 <ul class="dropdown-menu" name="site_type">
                     <li><a href="#" value="news">News</a></li>
