--- a/views/templates/newsfeed.ejs
+++ b/views/templates/newsfeed.ejs
@@ -1,40 +1,46 @@
-<% output['posts'].forEach(function(item) { %>
-<div class="col-md-10 blogShort">
-    <!--article class="article-body"-->
+<em class="text-center center-block">
+    <!-- kentrarismeno keimeno em -->
+    Βρέθηκαν <%= output['totalResults'] %> αποτελέσματα
+    - Εμφανίζονται τα <%= output['totalResults'] - output['moreResultsAvailable'] %> απο αυτά
+    - <%= output['requestsLeft'] %> requests left (Debugging)
+</em>
+<% output['posts'].forEach(function(item, index) { %>
+<!-- Me tin parametro "index" metraw ta arthra (gia debugging) -->
+<div class="col-md-10 blogShort pull-right">
+    <!-- Ola ta arthra emfanizontai pleon to ena katw apo to allo -->
     <a class="hover_style" href="<%- item.thread.url %>" target="_blank">
         <% if (item.thread.title_full) { %>
         <h1><%= item.thread.title_full %></h1>
         <% } else { %>
         <h1><%= item.thread.title %></h1>
         <% } %>
-
         <div class="center-cropped">
             <img src="<%- item.thread.main_image %>" alt="post img"
                  class="pull-left img-responsive thumb my-img img-thumbnail"
-                 onError="this.onerror=null;this.src='/images/photo-not-available.png';">
+                 onError="this.onerror=null;this.src='https://users.it.teithe.gr/~it144252/photo-not-available.png';">
+            <!-- onError diladi ean den vrethei eikona fortonetai eikona apo users.it -->
         </div>
     </a>
     <article class="article-body">
         <p class="read-more"><%= item.text %></p>
     </article>
-    <div class="clearfix">
-        <em>
-            <a href="http://<%= item.thread.site_full %>" target="_blank">
-                <%= item.thread.site_full %>
-            </a>
-        </em>
-        <em class="pull-right">
-            <%= moment(item.thread.published).format('LLLL') %>
-            <!-- px Τρίτη, 17 Οκτωβρίου 2017 9:54 ΜΜ -->
-        </em>
-    </div>
+    <em class="pull-left">
+        Article no <%= ++index %>
+        <a href="http://<%= item.thread.site_full %>" target="_blank">
+            <%= item.thread.site_full %>
+        </a>
+    </em>
+    <em class="pull-right">
+        <%= moment(item.thread.published).format('LLLL') %>
+        <!-- px Τρίτη, 17 Οκτωβρίου 2017 9:54 ΜΜ -->
+    </em>
 </div>
 <% }); %>
 <script type="text/javascript">
     $(document).ready(function () {
 
         $(".read-more").shorten({
-            "showChars": 500,
+            "showChars": 1100,
             "moreText": "Περισσότερα",
             "lessText": "Λιγότερα"
         });
