--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,30 +1,9 @@
 <% include ./templates/head.ejs %>
-<% include ./templates/navbar.ejs %>
+<% include templates/navbar.ejs %>
+
 <body>
 <div class="container-fluid">
-    <!-- Kalyteri emfanisi -->
-    <div id="blog" class="row">
-        <div class="col-sm-2 responsive">
-            <!-- Temporary nav -->
-            <nav class="nav-sidebar" data-spy="affix">
-                <ul class="nav nav-stacked">
-                    <li class="active"><a href="javascript:"><span class="glyphicon glyphicon-star"></span> News</a>
-                    </li>
-                    <li><a href="javascript:">Latest news</a></li>
-                    <li><a href="javascript:">Updates</a></li>
-                    <li><a href="javascript:">Training</a></li>
-                    <li><a href="javascript:">Nutrition</a></li>
-                    <li><a href="javascript:">Proteins</a></li>
-                    <li><a href="javascript:">Recipes</a></li>
-                    <li><a href="javascript:">Challenge</a></li>
-                    <li class="nav-divider"></li>
-                    <li><a href="javascript:"><i class="glyphicon glyphicon-off"></i> Sign in</a></li>
-                </ul>
-            </nav>
-        </div>
-        <% include ./templates/newsfeed.ejs %>
-        <div class="col-md-12 gap10"></div>
-    </div>
+    <% include ./templates/newsfeed.ejs %>
 </div>
 
 </body>
