--- a/views/templates/head.ejs
+++ b/views/templates/head.ejs
@@ -8,10 +8,11 @@
     <link href="/stylesheets/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="/stylesheets/bootstrap-theme.css" rel="stylesheet" type="text/css">
     <link href="/stylesheets/style.css" rel="stylesheet" type="text/css">
+    <link href="/stylesheets/navbar.css" rel="stylesheet" type="text/css">
 
     <script src="/javascripts/jquery-3.2.1.js" type="text/javascript"></script>
     <script src="/javascripts/jquery-3.2.1.min.js" type="text/javascript"></script>
     <script src="/javascripts/bootstrap.js" type="text/javascript"></script>
-    <script type="text/javascript" src="https://viralpatel.net/blogs/demo/jquery/jquery.shorten.1.0.js"></script>
+    <script src="/javascripts/shortenText.js" type="text/javascript"></script>
 </head>
 <body>
