FB with database integration. UI Tweaks
Functionality:
1) Added Facebook Login with database integration.
2) Database Schema. Moved record "name" outside "facebook" scope.
3) Fixed deprecation warning when connecting to database.
4) Fixed error when website crashes because json file could not be retrived.

UI:
1) Sidebar removed.
2) Changed navbar with better login UI.
3) Whole content moved to the center of the screen.

Code Rearrangement:
1) Moved all information to one file for better management
2) Shorten text is now a project file and not a link to a website

--- a/views/templates/newsfeed.ejs
+++ b/views/templates/newsfeed.ejs
@@ -4,11 +4,12 @@
     - Εμφανίζονται τα <%= output['totalResults'] - output['moreResultsAvailable'] %> απο αυτά
     - <%= output['requestsLeft'] %> requests left (Debugging)
 </em>
+<% if (output['posts']) { %>
 <% output['posts'].forEach(function(item, index) { %>
 <!-- Me tin parametro "index" metraw ta arthra (gia debugging) -->
 <!--div class="col-md-10 blogShort">
     <!-- Ola ta arthra emfanizontai pleon to ena katw apo to allo -->
-<div class="container">
+<div class="container load-more">
     <div class="col-md-6 col-md-offset-6 blogShort">
         <a class="hover_style" href="<%- item.thread.url %>" target="_blank">
             <% if (item.thread.title_full) { %>
@@ -39,6 +40,9 @@
     </div>
 </div>
 <% }); %>
+<% } else { %>
+<h1>ERROR</h1>
+<% } %>
 <script type="text/javascript">
     $(document).ready(function () {
 
