--- a/views/templates/navbar.ejs
+++ b/views/templates/navbar.ejs
@@ -56,7 +56,7 @@
                     </ul>
                 </li>
                 <% } else { %>
-                <li><p class="navbar-text">Hello <%= user.facebook.name %></p></li>
+                <li><p class="navbar-text">Hello <%= user.name %></p></li>
                 <% } %>
             </ul>
         </div><!-- /.navbar-collapse -->
