--- a/views/templates/navbar.ejs
+++ b/views/templates/navbar.ejs
@@ -38,22 +38,9 @@
             </form>
             <ul class="nav navbar-nav navbar-right">
                 <% if (!login) { %>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
-                    <ul id="login-dp" class="dropdown-menu">
-                        <li>
-                            <div class="row">
-                                <div class="col-md-12 text-center">
-                                    Login via
-                                    <div class="social-buttons">
-                                        <a href="/login/facebook" class="btn btn-fb"><i class="fa fa-facebook"></i>
-                                            Facebook</a>
-                                        <a href="#" class="btn btn-tw"><i class="fa fa-twitter"></i> Twitter</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
+                <li>
+                    <a href="/login/itlogin" ><b>Login</b></a>
+
                 </li>
                 <% } else { %>
                 <li><p class="navbar-text">Hello <%= user.name %></p></li>
