Login is now working with both Facebook and IT Login with database integration. Hopefully it works. Facebook tells "Something went wrong"

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -85,3 +85,13 @@ article {
 article p {
     margin-bottom: .5em;
 }
+
+.btn-itLogin {
+    color: white;
+    background-color: #009688;
+}
+
+.btn-itLogin:hover {
+    color: white;
+    background-color: #00aa9a;
+}
