--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,10 @@
 <% include ./templates/head.ejs %>
-<% include templates/navbar.ejs %>
+<% include ./templates/navbar.ejs %>
 
 <body>
 <div class="container-fluid">
     <% include ./templates/newsfeed.ejs %>
 </div>
-
 </body>
 
 </html>
