--- a/views/templates/head.ejs
+++ b/views/templates/head.ejs
@@ -7,6 +7,7 @@
 
     <link href="/stylesheets/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="/stylesheets/bootstrap-theme.css" rel="stylesheet" type="text/css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="/stylesheets/style.css" rel="stylesheet" type="text/css">
     <link href="/stylesheets/navbar.css" rel="stylesheet" type="text/css">
 
