--- a/views/templates/navbar.ejs
+++ b/views/templates/navbar.ejs
@@ -38,9 +38,23 @@
             </form>
             <ul class="nav navbar-nav navbar-right">
                 <% if (!login) { %>
-                <li>
-                    <a href="/login/itlogin" ><b>Login</b></a>
-
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
+                    <ul id="login-dp" class="dropdown-menu">
+                        <li>
+                            <div class="row">
+                                <div class="col-md-12 text-center">
+                                    Login via
+                                    <div class="social-buttons">
+                                        <a href="/login/facebook" class="btn btn-fb">
+                                            Facebook</a>
+                                        <a href="/login/itLogin" class="btn btn-itLogin">
+                                            IT Login</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
                 </li>
                 <% } else { %>
                 <li><p class="navbar-text">Hello <%= user.name %></p></li>
