Fixed login with Facebook and IT AGAIN. Updated mongoose schema.

--- a/views/templates/navbar.ejs
+++ b/views/templates/navbar.ejs
@@ -17,9 +17,10 @@
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Link</a></li>
                 <li><a href="#">Link</a></li>
-                <li class="dropdown">
+                <li class="dropdown" id="countriesList">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
+                        <!--
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
                         <li><a href="#">Something else here</a></li>
@@ -27,6 +28,7 @@
                         <li><a href="#">Separated link</a></li>
                         <li class="divider"></li>
                         <li><a href="#">One more separated link</a></li>
+                        -->
                     </ul>
                 </li>
             </ul>
@@ -57,7 +59,11 @@
                     </ul>
                 </li>
                 <% } else { %>
-                <li><p class="navbar-text">Hello <%= user.name %></p></li>
+                    <% if (user.facebook.token) { %>
+                        <li><p class="navbar-text">FACEBOOK Hello <%= user.facebook.name %></p></li>
+                    <% } else { %>
+                        <li><p class="navbar-text">IT Hello <%= user.it.name %></p></li>
+                    <% } %>
                 <% } %>
             </ul>
         </div><!-- /.navbar-collapse -->
