--- a/views/templates/head.ejs
+++ b/views/templates/head.ejs
@@ -11,9 +11,9 @@
     <link href="/stylesheets/style.css" rel="stylesheet" type="text/css">
     <link href="/stylesheets/navbar.css" rel="stylesheet" type="text/css">
 
-    <script src="/javascripts/jquery-3.2.1.js" type="text/javascript"></script>
     <script src="/javascripts/jquery-3.2.1.min.js" type="text/javascript"></script>
     <script src="/javascripts/bootstrap.js" type="text/javascript"></script>
+    <script src="/javascripts/loadMore.js" type="text/javascript"></script>
     <script src="/javascripts/shortenText.js" type="text/javascript"></script>
 </head>
 <body>
