--- a/views/templates/navbar.ejs
+++ b/views/templates/navbar.ejs
@@ -1,6 +1,5 @@
-<nav class="navbar navbar-default navbar-inverse navbar-fixed-top" role="navigation">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
                     data-target="#bs-example-navbar-collapse-1">
@@ -9,34 +8,25 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Login dropdown</a>
+            <a class="navbar-brand" href="#">Web News Feed</a>
         </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <!--
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Link</a></li>
                 <li><a href="#">Link</a></li>
                 <li class="dropdown" id="countriesList">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                        <!--
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
-                        <li class="divider"></li>
-                        <li><a href="#">One more separated link</a></li>
-                        -->
                     </ul>
                 </li>
             </ul>
+            -->
             <form class="navbar-form navbar-left" role="search">
                 <div class="form-group">
                     <input type="text" class="form-control" placeholder="Αναζήτηση" name="q">
                 </div>
-                <button type="submit" class="btn btn-default">Submit</button>
+                <button type="submit" class="btn btn-default">Αναζήτηση</button>
             </form>
             <ul class="nav navbar-nav navbar-right">
                 <% if (!login) { %>
@@ -59,13 +49,13 @@
                     </ul>
                 </li>
                 <% } else { %>
-                    <% if (user.facebook.token) { %>
-                        <li><p class="navbar-text">FACEBOOK Hello <%= user.facebook.name %></p></li>
-                    <% } else { %>
-                        <li><p class="navbar-text">IT Hello <%= user.it.name %></p></li>
-                    <% } %>
+                <% if (user.facebook.token) { %>
+                <li><p class="navbar-text">Hello <%= user.facebook.name %></p></li>
+                <% } else { %>
+                <li><p class="navbar-text">Hello <%= user.it.name %></p></li>
+                <% } %>
                 <% } %>
             </ul>
-        </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
+        </div>
+    </div>
 </nav>
