--- a/views/templates/head.ejs
+++ b/views/templates/head.ejs
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>A Website</title>
 
-    <link href="/stylesheets/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="/stylesheets/bootstrap-theme.css" rel="stylesheet" type="text/css">
+    <link href="/kvisnia/stylesheets/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="/kvisnia/stylesheets/bootstrap-theme.css" rel="stylesheet" type="text/css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="/stylesheets/style.css" rel="stylesheet" type="text/css">
-    <link href="/stylesheets/navbar.css" rel="stylesheet" type="text/css">
+    <link href="/kvisnia/stylesheets/style.css" rel="stylesheet" type="text/css">
+    <link href="/kvisnia/stylesheets/navbar.css" rel="stylesheet" type="text/css">
 
-    <script src="/javascripts/jquery-3.2.1.min.js" type="text/javascript"></script>
-    <script src="/javascripts/bootstrap.js" type="text/javascript"></script>
-    <script src="/javascripts/loadMore.js" type="text/javascript"></script>
-    <script src="/javascripts/shortenText.js" type="text/javascript"></script>
+    <script src="/kvisnia/javascripts/jquery-3.2.1.min.js" type="text/javascript"></script>
+    <script src="/kvisnia/javascripts/bootstrap.js" type="text/javascript"></script>
+    <script src="/kvisnia/javascripts/loadMore.js" type="text/javascript"></script>
+    <script src="/kvisnia/javascripts/shortenText.js" type="text/javascript"></script>
 </head>
 <body>
