--- a/views/templates/head.ejs
+++ b/views/templates/head.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>A Website</title>
+    <title>WFeed</title>
 
     <link href="/stylesheets/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="/stylesheets/bootstrap-theme.css" rel="stylesheet" type="text/css">
